# chat

./: README.md  chat.cabal
app/: Main.hs
src/: Server.hs
web/: chat.html  chat.js  helloworld.html  helloworld.js
