name:                chat
version:             0.1.0.0
synopsis:            Basic webchat built with Haskell-Spock and ReactJS
description:         Please see README.md
homepage:            http://github.com/lslah/chat
license:             BSD3
author:              Thomas Wienecke
maintainer:          wienecke.t@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , mtl
                     , stm
                     , Spock
                     , text
                     , time
                     , vector
                     , wai
                     , wai-extra
                     , wai-middleware-static
  default-language:    Haskell2010

executable chat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , chat
                     , Spock
  default-language:    Haskell2010

test-suite chat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lslah/chat
